Configurando auditoria, e convercao token jwt